--- a/01_gathering.ipynb
+++ b/01_gathering.ipynb
@@ -86,26 +86,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-04-22 15:23:49.059477\n",
-      ".....................\n",
-      "elapsed: 0:03:26.567977\n"
+      "2019-01-23 14:04:50.070045\n",
+      "..............................\n",
+      "elapsed: 0:05:31.758698\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -160,7 +160,7 @@
     "\n",
     "base_url = [\n",
     "    'https://www.glassdoor.com/Job/new-york-data-scientist-jobs-SRCH_IL.0,8_IC1132348_KO9,23_IP', \n",
-    "    '.htm?radius=0&fromAge=14&minSalary=26000&jobType=fulltime'\n",
+    "    '.htm?radius=5&fromAge=14&minSalary=26000&jobType=fulltime'\n",
     "]\n",
     "\n",
     "count = 1\n",
@@ -195,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1301\n"
+      "1910\n"
      ]
     }
    ],
@@ -367,13 +367,12 @@
     "        driver.close()\n",
     "        driver.quit()\n",
     "    except Exception as e: \n",
-    "        print('\\nposs expired listing: {}'.format(str(e)))\n",
     "        ## try/exc is workaround, see https://bit.ly/2umrGrq\n",
     "        time.sleep(3)\n",
     "        try:\n",
     "            driver.close()\n",
     "        except Exception as e:\n",
-    "            print('get_listing 2: {}'.format(str(e)))\n",
+    "            print(',', end = '')\n",
     "        driver.quit() \n",
     "        result = None\n",
     "    return result"
@@ -390,34 +389,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-04-22 15:27:16.010025\n",
-      "1301\n",
-      "0.........100.........200.........300.........400.........500.........600.........700.........800.........900.........1000.........\n",
-      "poss expired listing: 'NoneType' object has no attribute 'text'\n",
-      "url loop: 'NoneType' object has no attribute 'T'\n",
-      "1100...\n",
-      "poss expired listing: 'NoneType' object has no attribute 'text'\n",
-      "url loop: 'NoneType' object has no attribute 'T'\n",
-      "....\n",
-      "poss expired listing: 'NoneType' object has no attribute 'text'\n",
-      "url loop: 'NoneType' object has no attribute 'T'\n",
-      "..1200\n",
-      "poss expired listing: 'NoneType' object has no attribute 'text'\n",
-      "url loop: 'NoneType' object has no attribute 'T'\n",
-      ".....\n",
-      "poss expired listing: 'NoneType' object has no attribute 'text'\n",
-      "url loop: 'NoneType' object has no attribute 'T'\n",
+      "2019-01-23 14:10:22.225630\n",
+      "1910\n",
+      "0.........100.........200.........300.........400.....,....,500.........600.....,...,.700.........800.........900.........1000.........1100.........1200.........1300.........1400.........1500.........1600....,.....,1700.....,..,..1800.........19001902\n",
       "\n",
-      "poss expired listing: 'NoneType' object has no attribute 'text'\n",
-      "url loop: 'NoneType' object has no attribute 'T'\n",
-      "...\n",
-      "poss expired listing: 'NoneType' object has no attribute 'text'\n",
-      "url loop: 'NoneType' object has no attribute 'T'\n",
-      ".13001294\n",
+      " 583\n",
       "\n",
-      " 606\n",
-      "\n",
-      "elapsed: 3:20:49.230192\n"
+      "elapsed: 5:01:33.598989\n"
      ]
     }
    ],
@@ -438,7 +416,7 @@
     "        urls.append(url)\n",
     "    except Exception as e:\n",
     "        skipped.append(url)\n",
-    "        print('url loop: {}'.format(str(e)))\n",
+    "        print(',', end = '')\n",
     "    if count%100 == 0:\n",
     "        print(count, end = '')\n",
     "    elif count%10 == 0:\n",
@@ -468,7 +446,7 @@
     "big_df.head(2)\n",
     "big_df.drop_duplicates(subset = ['jobid', 'validthrough', 'title'], inplace = True)\n",
     "print('\\n', len(big_df))\n",
-    "big_df.to_csv('assets/glassdoor_22april2018.csv', index = False)\n",
+    "big_df.to_csv('assets/glassdoor_current.csv', index = False)\n",
     "\n",
     "end = dt.now()\n",
     "print('\\nelapsed: {}'.format(end - start))"
@@ -482,13 +460,14 @@
     {
      "data": {
       "text/plain": [
-       "['http://www.glassdoor.com/partner/jobListing.htm?pos=1802&ao=186496&s=58&guid=00000162eed27352bbfa14c228bc2031&src=GD_JOB_AD&t=SR&extid=1&exst=OL&ist=&ast=OL&vt=w&slr=true&rtp=0&cs=1_fe90273d&cb=1524425192937&jobListingId=2739078444',\n",
-       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=1802&ao=186496&s=58&guid=00000162eed27352bbfa14c228bc2031&src=GD_JOB_AD&vt=w&rtp=0&cs=1_fe90273d&cb=1524425192985&jobListingId=2739078444',\n",
-       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=1914&ao=175631&s=58&guid=00000162eed2985d9e63456f8a1ffb17&src=GD_JOB_AD&t=SR&extid=1&exst=OL&ist=&ast=OL&vt=w&slr=true&rtp=0&cs=1_8805b47a&cb=1524425202470&jobListingId=2728429085',\n",
-       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=1914&ao=175631&s=58&guid=00000162eed2985d9e63456f8a1ffb17&src=GD_JOB_AD&vt=w&rtp=0&cs=1_8805b47a&cb=1524425202502&jobListingId=2728429085',\n",
-       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=2026&ao=186496&s=58&guid=00000162eed2bfe993875553ca0f76c5&src=GD_JOB_AD&t=SR&extid=1&exst=OL&ist=&ast=OL&vt=w&slr=true&rtp=0&cs=1_2b74984b&cb=1524425212616&jobListingId=2734570887',\n",
-       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=2026&ao=186496&s=58&guid=00000162eed2bfe993875553ca0f76c5&src=GD_JOB_AD&t=SR&extid=1&exst=OL&ist=&ast=OL&vt=w&slr=true&rtp=0&cs=1_2b74984b&cb=1524425212617&jobListingId=2734570887',\n",
-       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=2026&ao=186496&s=58&guid=00000162eed2bfe993875553ca0f76c5&src=GD_JOB_AD&vt=w&rtp=0&cs=1_2b74984b&cb=1524425212627&jobListingId=2734570887']"
+       "['http://www.glassdoor.com/partner/jobListing.htm?pos=801&ao=37049&s=58&guid=000001687c1af2d2aada6b02b309a678&src=GD_JOB_AD&t=SR&extid=1&exst=OL&ist=&ast=OL&vt=w&slr=true&cs=1_197d1745&cb=1548270368354&jobListingId=3037161936',\n",
+       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=801&ao=37049&s=58&guid=000001687c1af2d2aada6b02b309a678&src=GD_JOB_AD&vt=w&cs=1_197d1745&cb=1548270368388&jobListingId=3037161936',\n",
+       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=1105&ao=37049&s=58&guid=000001687c1b73fd82d75819e836675b&src=GD_JOB_AD&t=SR&extid=1&exst=OL&ist=&ast=OL&vt=w&slr=true&cs=1_2793dd8b&cb=1548270401343&jobListingId=3037161936',\n",
+       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=1105&ao=37049&s=58&guid=000001687c1b73fd82d75819e836675b&src=GD_JOB_AD&vt=w&cs=1_2793dd8b&cb=1548270401374&jobListingId=3037161936',\n",
+       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=2609&ao=189299&s=58&guid=000001687c1df628aed8f4b2c945f6ce&src=GD_JOB_AD&vt=w&cs=1_dd199e50&cb=1548270565768&jobListingId=3093061229',\n",
+       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=2726&ao=220345&s=58&guid=000001687c1e206d8f4e2289b01f0993&src=GD_JOB_AD&t=SR&extid=1&exst=OL&ist=&ast=OL&vt=w&slr=true&cs=1_0ea6e795&cb=1548270576886&jobListingId=3087431649',\n",
+       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=2829&ao=3839&s=58&guid=000001687c1e4952b34dd9c9776e3670&src=GD_JOB_AD&t=SR&extid=1&exst=OL&ist=&ast=OL&vt=w&slr=true&cs=1_622fa34a&cb=1548270587212&jobListingId=2912855104',\n",
+       " 'http://www.glassdoor.com/partner/jobListing.htm?pos=2817&ao=4348&s=58&guid=000001687c1e4952b34dd9c9776e3670&src=GD_JOB_AD&vt=w&aa=1&ea=1&cs=1_b011d8f4&cb=1548270587215&jobListingId=3066679566']"
       ]
      },
      "execution_count": 9,
@@ -499,6 +478,15 @@
    "source": [
     "skipped"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
